--- a/Results_Plots_Code/All_Figures_values.ipynb
+++ b/Results_Plots_Code/All_Figures_values.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_csv_path = 'C:\\\\Users\\\\Rajat\\\\Desktop\\\\PROJECT_MODE\\\\Performance_Dataset\\\\Performance\\\\data\\\\all_csv'"
+    "all_csv_path = '\\\\Results_CSV\\\\all_csv'"
    ]
   },
   {
