--- a/Codes/DNN_all_template/DNN_all_Stitch_Simulated.ipynb
+++ b/Codes/DNN_all_template/DNN_all_Stitch_Simulated.ipynb
@@ -258,16 +258,14 @@
     "        k = k + 1  \n",
     "    print(df.head())\n",
     "    df.to_csv(r'Results_stitch_simulated.csv')\n",
-    "        # print('MSE for 10 folds\\n', mse_scores)\n",
-    "        # print('\\nR2 scores for 10 folds\\n', r2_scores)\n",
-    "        # print('\\nMAPE for 10 folds\\n', mape_scores)\n",
-    "        # print('\\nMAE scores for 10 folds\\n', mae_scores)\n",
-    "        # print('\\nMean MSE = ', np.mean(mse_scores), '\\nMedian MSE = ', np.median(mse_scores))\n",
-    "        # print('\\nMean R2 score =',np.mean(r2_scores), '\\nMedian R2 scores = ', np.median(r2_scores))\n",
-    "        # print('\\nMean Absolute Percentage Error =',np.mean(mape_scores), \n",
-    "        #       '\\nMedian Absolute Percentage Error =', np.median(mape_scores))    \n",
-    "        # print('\\nMean MAE =',np.mean(mae_scores), \n",
-    "        #      '\\nMedian MAE =', np.median(mae_scores)) \n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main Function Called"
    ]
   },
   {
@@ -335,8 +333,8 @@
    ],
    "source": [
     "dataset_name = 'stitch_simulated'\n",
-    "dataset_path = 'C:\\\\Users\\\\Rajat\\\\Desktop\\\\PROJECT_MODE\\\\Performance_Dataset\\\\Performance\\\\Simulator\\\\stitch.csv'\n",
-    "path_for_saving_data = 'C:\\\\Users\\\\Rajat\\\\Desktop\\\\PROJECT_MODE\\\\Performance_Dataset\\\\Performance\\\\data\\\\' + dataset_name\n",
+    "dataset_path = 'Dataset_CSV\\\\Simulator\\\\stitch.csv'\n",
+    "path_for_saving_data = 'data\\\\' + dataset_name\n",
     "process_all(dataset_path, dataset_name, path_for_saving_data)"
    ]
   },
